# game_sdl2_c

./: .gitignore  CMakeLists.txt  Makefile  README.md
functions/: .draw.c.swp  .input.c.swp  .stage.c.swp  draw.c  init.c  input.c  main.c  stage.c  util.c
headers/: .common.h.swp  .defs.h.swp  .structs.h.swp  .util.h.swp  common.h  defs.h  draw.h  init.h  input.h  main.h  stage.h  structs.h  util.h
include/: background.h  bullet.h  common.h  defs.h  draw.h  effects.h  enemy.h  entity.h  highscore.h  hud.h  init.h  initPlayer.h  input.h  main.h  player.h  points.h  sound.h  stage.h  structs.h  text.h  title.h  util.h
src/: background.c  bullet.c  draw.c  effects.c  enemy.c  entity.c  highscore.c  hud.c  init.c  input.c  main.c  player.c  points.c  sound.c  stage.c  text.c  title.c  util.c
